Criação de tooltips nos botões da página index. Correção do layout dos itens adicionados. Ajuste no layout do botão de limpar arquivos.

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                         <p class="font-size">Potencialize a segurança ao converter seus próprios certificados internos, mitigando assim os riscos inerentes ao envolvimento com prestadores de serviços externos!</p>
                         <div id="btn-gpm" class="mt-md-5">
                             <div>
-                                <button id="bg-btn-white" class="btn next-btn"><a href="tipo-certificado/tipo-certificado.html">Próximo</a></button>
+                                <button id="bg-btn-white" class="btn next-btn"><a href="tipo-certificado/tipo-certificado.html" onmouseover="showMessage()">Próximo</a></button>
                             </div>
                             <div>
-                                <button id="bg-btn-out" class="btn docs-btn custom-button">Documentação</button>
+                                <button id="bg-btn-out" class="btn docs-btn custom-button" onmouseover="showMessage()">Documentação</button>
                             </div>
                         </div>
                     </div>
