--- a/upload/upload.html
+++ b/upload/upload.html
@@ -31,29 +31,29 @@
                 <!-- Titulo da conversão-->
                 <h2 id="output" class="fs-4"></h2>
             </div>
-            <div>
-                <button id="close1" onclick="deleteFilesInDropArea()" onmouseover="showMessage()" onmouseout="hideMessage()">Limpar arquivos</button>
+            <div class="line-button">
+                <button id="close1" class="clean-page-btn" onclick="deleteFilesInDropArea()" onmouseover="showMessage()" onmouseout="hideMessage()">Limpar arquivos</button>
             </div>
             <div id="docsArea" class="docs-area">
                 <!-- PFX - Area de arquivo -->
                 <div id="drop-area-pfx" class="drop-area">
-                    <div id="drop-area-text" class="drop-area-text icon-upload">
-                        <div id="imgUpload" class="icon-upload selector">
+                    <div id="drop-area-text" class="drop-area-text">
+                        <div id="imgUpload" class="img-upload selector">
                             <img class="img selector" src="../imagem/upload.png" alt="ícone de upload">
                         </div>
-                        <div class="icon-upload">
+                        <div class="title-area">
                             <h2 id="fonte" class="fonte">Clique aqui e adicione seu arquivo válido.<br></h2>
                             <h2 id="fonte2" class="fonte">Ou arraste e solte o arquivo na área delimitada.</h2>
                         </div>
                     </div>
                     <div class="icon-upload">
-                        <div>
+                        <div class="document-itens">
                             <img id="img1" class="sizeFile selector" src="../imagem/file.png">
-                            <span id="span1"></span>
+                            <span id="span1" class="title-docs"></span>
                         </div>
-                        <div>
+                        <div class="document-itens">
                             <img id="img2" class="sizeFile selector" src="../imagem/file.png">
-                            <span id="span2"></span>
+                            <span id="span2" class="title-docs"></span>
                         </div>
                     </div>
                 </div>
